# turn-detection-comparison

./: .gitignore  README.md
turn-detection-demo/: .env.example  .gitignore  Dockerfile  bot.py  dashboard.py  metrics_observer.py  multi_bot.py  pyproject.toml  server.py
turn-detection-demo/scripts/: export.py  generate_caller_audio.py  generate_test_data.py  replay_client.py  start_multi.sh  test_call.sh
turn-detection-demo/static/: dashboard.html
